--- a/public/css/style.css
+++ b/public/css/style.css
@@ -15,10 +15,14 @@ a {
     display: none;
 }
 .headmenu {
+  display: flex;
   /*width: 100%;*/
 	/*border: 1px solid black;*/
 	padding: 34px;
 	background-color: #2a2c2f;
+}
+.company-logo {
+    width: 20%;
 }
 .hr {
   width: 22%; 
@@ -53,13 +57,10 @@ a {
 }
 
 .headmenu .sub-menu {
-	/*border: 1px solid red;*/
-    position: absolute;
-    top: 38px;
-    left: 23%;
     font-size: 19px;
     padding: 10px;
     display: inline-block;
+    width: 30%;
 }
 
 .headmenu .sub-menu .des3 {
@@ -136,11 +137,36 @@ a {
 }
 
 .headmenu .inputs {
-	position: absolute;
-    left: 57%;
-    top: 24px;
+	/*position: absolute;*/
+   /* left: 57%;
+    top: 24px;*/
 }
-
+.dropdown-content-account {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 118px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    padding: 0px 16px;
+    z-index: 1;
+    border-radius: 8px;
+    /*margin-left: 60px;
+    margin-top: 7px;*/
+    font-size: 15px;
+}
+.dropdown-account:hover .dropdown-content-account {
+    display: block;
+}
+.dropdown-content-account a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  font-weight: 700;
+}
+.dropdown-content-account a:hover {
+  color: #C4A265;
+}
 .headmenu .inputs .inpt-search {
     padding: 13px;
     display: inline-block;
@@ -164,9 +190,7 @@ a {
 }
 
 .headmenu .icons {
-    position: absolute;
-    left: 91%;
-    top: 42px;
+    
 }
 
 .headmenu .icons .icons2 {
@@ -477,7 +501,7 @@ span.product-title {
 }
 .sub-container4{
     height: 500px;
-    width: 1887px;
+    width: 100%;
     display: flex;
 }
 .footer-logo {
@@ -568,7 +592,7 @@ span.footer-title {
     height: 75px;
 }
 .footer-desc {
-    margin: 10px 27px;
+    margin: 10px 20px;
     width: 270px;
 }
 span.sp {
@@ -671,15 +695,13 @@ span.sp {
     padding-right: 7px;
 }
 
-
-
-
-
-
-
-
-
-
+a.icon1 {
+   display: flex;
+   justify-content: center;
+}
+.qual-icon-cont {
+    text-align: center;
+}
 .hero-text h2 {
   margin-bottom: 50px;
 }
@@ -894,6 +916,22 @@ span.cart-title {
 .view-cart-sidebar button:hover {
     color: #fff;
     background: #b28b19;
+}
+.icons-inputs{
+    display: flex;
+    width: 30%;
+}
+.icons {
+    display: flex;
+    align-items: center;
+    width: 19%;
+    justify-content: center;
+}
+.footer-1st-cont {
+    display: flex;
+}
+.footer-2nd-cont {
+    display: flex;
 }
 /*.add-to-cart-items {*/
  /*   border-left: solid #7d35069e 5px;
