--- a/public/css/logincss.css
+++ b/public/css/logincss.css
@@ -4,7 +4,9 @@
         margin: 0;
         padding: 0;
         height: 100%;
-        background: #60a3bc !important;
+        /* background: #525556 !important; */
+        background-image: url(../asset/img/599.jpg);
+        
     }
     .user_card {
         height: 400px;
