--- a/public/css/style.css
+++ b/public/css/style.css
@@ -738,7 +738,7 @@ a.icon1 {
 }
 
 .btn-primary {
-  background-color: #5302FE;
+  background-color: #ff8800fc;
   border: #111;
   border-radius: 0;
 }
