--- a/public/css/responsive.css
+++ b/public/css/responsive.css
@@ -182,7 +182,6 @@
 	.headmenu .icons {
 		left: 118%;
 	    top: 42px;
-	    width: 10%;
 	}
 	.icons2 {
 		margin-left: -4px;
@@ -236,6 +235,9 @@
 	.box3-info p {
 		font-size: 18px;
 	}
+	.dropdown-content-account {
+    	right: 0px;
+	}
 
 
 }
@@ -261,9 +263,10 @@
 		display: block;
 	}
 	.headmenu {
-   		height: 100px;
+   		/*height: 100px;*/
+	    height: auto;
 	    display: flex;
-	    width: 95%;
+        width: 100%;
 	}
 	.headmenu .icons {
 	    position: unset; 
@@ -277,14 +280,16 @@
 		font-size: 32px;
 	}
 	.company-logo {
-		width: 60%;
+	    width: 50%;
 		display: flex;
+	    padding: 10px 36px;
+        justify-content: end;
 	}
 	span.des-logo {
-    	width: 119px;
+	    width: 87px;
 	}
 	.des-logo img {
-		width: 80px;
+	    width: 66px;
 	}
 	.headmenu .des2 {
 	    color: white;
@@ -317,7 +322,7 @@
 	}
 	button.menu-toggle {
 	    /*width: 13%;*/
-        width: 100%;
+        width: auto;
 	    height: 71px;
 	    margin: 14px 0;
 	    font-size: 25px;
@@ -680,12 +685,13 @@
 	.headmenu {
     	display: block;
     	height: auto;
-	    padding: 61px 33px;
+       	padding: 61px 0;
 	}	
 	.headmenu .icons {
     	width: 100%;
 	    display: flex;
 	    justify-content: center; 
+	    padding: 0;
 	}
 	.mobile-menu {
    		width: 100%;
@@ -728,6 +734,7 @@
 	.company-logo {
 	    width: 100%;
     	justify-content: center;
+	    padding: 10px 0px;
 	}
 	.slick-list.draggable {
     	width: 100%;
