--- a/public/css/style.css
+++ b/public/css/style.css
@@ -948,3 +948,117 @@ span.cart-title {
     border-left: solid #b25807 5px;
 }*/
 
+/*login */
+.login-reg-form {
+    width: 500px;
+    border: solid rgb(222, 220, 220);
+    margin: 10% 37%;
+    height: auto;
+    background: rgb(222, 220, 220);
+    border-radius: 5px;
+
+}
+.social-log {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+}
+.account-log {
+    height: 112px;
+    display: block;
+    width: 100%;
+    padding: 23px 0;
+    text-align: center;
+}
+.signin-forgot {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    padding: 18px 0;
+}
+
+.signup-new {
+    text-align: center;
+}
+
+.login-container {
+    width: 358px;
+    height: auto;
+    /*border: solid red;*/
+    margin: 70px 71px;
+}
+
+button.btn.facebook-btn.social-btn {
+    height: 50px;
+    width: 50%;
+    border-radius: 5px;
+    background: #4267B2;
+    color: #fff;
+}
+button.btn.google-btn.social-btn {
+    height: 50px;
+    width: 50%;
+    border-radius: 5px;
+    background: #DB4437;
+    color: #fff;
+}
+input#email {
+    width: 100%;
+    height: 45px;
+    /*background: black;*/
+    /*color: #fff;*/
+    border-radius: 5px;
+    border: unset;
+    margin: 10px 0;
+}
+input#email:focus {
+    outline-color: #c4a265;
+}
+input#password {
+    outline-color: #c4a265;
+}
+input#password {
+    width: 100%;
+    height: 45px;
+    /*background: black;*/
+    /*color: #fff;*/
+    border-radius: 5px;
+    border: unset;
+    margin: 10px 0;
+}
+button.btn.btn-success.btn-block {
+    height: 46px;
+    width: 97px;
+    background: #c4a265;
+    border: #c4a265;
+    color: #fff;
+    font-size: 18px;
+    border-radius: 4px;
+}
+span.forgot-pass {
+    background: rgb(222, 220, 220);
+    padding: 14px;
+    margin-left: 10px;
+    border-radius: 5px;
+}
+.forgot-pass a{
+    color: #c4a265;
+}
+.btn-primary#btn-signup {
+    background-color: #ff8800fc;
+    /* border: #111; */
+    border-radius: 5px;
+    height: 54px;
+    color: #fff;
+    font-size: 18px;
+    padding: 18px;
+}
+.login-body {
+    background-image: url(../asset/img/599.jpg);
+}
+
+
+
+
+
+/*end login*/
