--- a/public/css/style.css
+++ b/public/css/style.css
@@ -24,13 +24,13 @@ a {
   height: auto;
 }
 .company-logo {
-    width: 20%;
+    width: 23%;
     display: flex;
     justify-content: center;
     padding: 10px 0;
 }
 .header-container{
-  width: 100%;
+    width: 100%;
 }
 img.logos {
     width: 76px;
@@ -166,6 +166,7 @@ img.logos {
     font-size: 15px;
     width: auto;
     height: auto;
+    right: 10px;
 }
 .dropdown-account:hover .dropdown-content-account {
     display: block;
@@ -215,7 +216,6 @@ img.logos {
 .headmenu .icons .icons3 {
     width: 30px;
 }
-
 .container {
 	/*border: 1px solid red;*/
 }
@@ -957,7 +957,8 @@ span.cart-title {
 
 /*login */
 .login-reg-form {
-    width: 500px;
+    /*width: 500px;*/
+    width: auto;
     border: solid #2a2c2f;
     margin: 6% 37%;
     height: auto;
@@ -972,7 +973,8 @@ span.cart-title {
     justify-content: space-between;
 }
 .account-log {
-    height: 112px;
+    /*height: 112px;*/
+    height: auto;
     display: block;
     width: 100%;
     padding: 23px 0;
